# dreamer_ros2

./: .gitmodules
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
src/: RMW_ZENOH_ROUTER_CONFIG.json5  cyclonedds.xml
src/dreamer/: CMakeLists.txt  package.xml
src/dreamer/launch/: dreamer.launch.xml
src/dreamer/map/: map.yaml
src/dreamer/rviz/: config.rviz
src/dreamer/scripts/: bbox_circle_markers.py  map_publisher.py
src/go2_controller/: CMakeLists.txt  package.xml
src/go2_controller/go2_controller/: __init__.py  go2_policy_node.py
src/go2_controller/launch/: go2_bringup.launch.xml
src/go2_controller/model/: policy.pt
src/go2_controller/scripts/: go2_policy_node  go2_policy_node.py
src/go2_description/urdf/: go2_description.urdf
src/go2_nav2/: CMakeLists.txt  maximin_astar_plugin.xml  package.xml
src/go2_nav2/config/: go2_nav2_dwb_params.yaml  go2_nav2_params.yaml
src/go2_nav2/include/go2_nav2/: maximin_astar.hpp  maximin_astar_planner.hpp
src/go2_nav2/launch/: go2_nav2.launch.py  go2_nav2.launch.xml  go2_nav2_dwb.launch.xml
src/go2_nav2/src/: maximin_astar.cpp  maximin_astar_planner.cpp  maximin_astar_planner_node.cpp
src/go2_nav2/test/: test_maximin_astar.cpp
src/world_model_nav_ros2/: CMakeLists.txt  package.xml
src/world_model_nav_ros2/config/: world_model_nav.yaml
src/world_model_nav_ros2/launch/: world_model_nav.launch.xml
src/world_model_nav_ros2/model/: best.pt
src/world_model_nav_ros2/scripts/: astar_planner_node.py  map_image_publisher_node.py  policy_controller_node.py  waypoint_tracker_node.py  world_model_nav_node.py
src/world_model_nav_ros2/world_model_nav_ros2/: __init__.py  core.py  ros_utils.py
