<?xml version="1.0"?>
<package format="3">
  <name>go2_controller</name>
  <version>0.0.1</version>
  <description>GO2 locomotion policy controller for ROS 2.</description>
  <maintainer email="john.abanes@nyu.edu">john</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>go2_description</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
